--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <h1>定位测试页面</h1>
+  <h1>定位测试页面o</h1>
   <p>每隔 1 分钟获取一次当前位置，并在下方显示：</p>
 
   <div class="info" id="location-info">
