--- a/index.html
+++ b/index.html
@@ -1,78 +1,51 @@
 <!DOCTYPE html>
-<html lang="zh">
-
+<html>
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="manifest" href="manifest.json" />
-  <title>定位测试</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      line-height: 1.6;
-    }
-
-    .info {
-      background: #f2f2f2;
-      padding: 10px;
-      border-radius: 6px;
-    }
-
-    .timestamp {
-      color: #666;
-      font-size: 0.9em;
-    }
-  </style>
+  <title>定位上传</title>
+  <script src="https://unpkg.com/leancloud-storage/dist/av.min.js"></script>
 </head>
-
 <body>
-  <h1>定位测试页面o</h1>
-  <p>每隔 1 分钟获取一次当前位置，并在下方显示：</p>
-
-  <div class="info" id="location-info">
-    <p>等待获取定位...</p>
-  </div>
+  <h2>定位测试（LeanCloud）</h2>
+  <div id="status">正在获取位置...</div>
 
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./service-worker.js')
-        .then(() => console.log('Service Worker registered'))
-        .catch(err => console.error('SW registration failed:', err));
-    }
-    function updateLocationDisplay(position) {
-      const { latitude, longitude, accuracy } = position.coords;
-      const timestamp = new Date().toLocaleString();
-      document.getElementById('location-info').innerHTML = `
-        <p><strong>时间：</strong><span class="timestamp">${timestamp}</span></p>
-        <p><strong>纬度：</strong>${latitude.toFixed(6)}</p>
-        <p><strong>经度：</strong>${longitude.toFixed(6)}</p>
-        <p><strong>精度：</strong>${accuracy} 米</p>
-      `;
-    }
+    // 初始化 LeanCloud
+    AV.init({
+      appId: 'CVDcFAHGDvgl3NmoHVaZTVRX-gzGzoHsz',
+      appKey: 'b5KpI5YqOGYysUE7zT5trdSM',
+      serverURL: 'https://cvdcfahg.lc-cn-n1-shared.com' // 控制台中可查
+    });
 
-    function handleError(err) {
-      document.getElementById('location-info').innerHTML = `<p style="color:red;">定位失败：${err.message}</p>`;
-    }
+    const LocationRecord = AV.Object.extend('LocationRecord');
 
-    function getLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(updateLocationDisplay, handleError, {
-          enableHighAccuracy: true,
-          timeout: 10000,
-          maximumAge: 0
-        });
-      } else {
-        document.getElementById('location-info').innerHTML = '<p>该浏览器不支持定位。</p>';
-      }
+    function uploadPosition(lat, lng) {
+      const record = new LocationRecord();
+      record.set('userId', 1);
+      record.set('latitude', lat);
+      record.set('longitude', lng);
+      record.set('timestamp', new Date());
+      record.save().then(() => {
+        document.getElementById('status').innerText = `上传成功：${lat}, ${lng}`;
+      }).catch(console.error);
     }
 
-    // 初始获取一次
-    getLocation();
+    function getAndUpload() {
+      navigator.geolocation.getCurrentPosition(
+        (pos) => {
+          const lat = pos.coords.latitude;
+          const lng = pos.coords.longitude;
+          uploadPosition(lat, lng);
+        },
+        (err) => {
+          document.getElementById('status').innerText = `定位失败：${err.message}`;
+        }
+      );
+    }
 
-    // 每 60 秒获取一次
-    setInterval(getLocation, 60 * 1000);
+    // 每分钟上传一次
+    getAndUpload();
+    setInterval(getAndUpload, 60000);
   </script>
 </body>
-
 </html>
