--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>定位上传</title>
-  <script src="https://unpkg.com/leancloud-storage/dist/av.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.12.0/dist/av-min.js"></script>
 </head>
 <body>
   <h2>定位测试（LeanCloud）</h2>
